Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37277

failure in doc of QPainter::setPen(const QColor&)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.3.0 RC1
    • 5.2.1
    • None
    • Qt 5.2.1, Win
    • 9508ea4c501c42b9c39dd6026a543d5766836097

    Description

      Doc of QPainter::setPen(const QColor&) says:

      "Sets the painter's pen to have style Qt::SolidLine, width 0 and the specified color."

      Width 0 is not true any more since by default in Qt 5, pens are not cosmetic any more but have width 1. QPainter::setPen(const QColor&) is using QPen constructor without width parameter, which will result in a pen width of 1.

      So doc must be changed: "width 0" -> "width 1".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            chriskatze Christian Schauss
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes